fixed feo new table and attributes names also checked all connections via swagger for funktionality (all but /POST didnt know what to put for values)
