# documentation/swagger.json
@@ -13,7 +13,7 @@
         "version": "1.0.0"
     },
     "host": "127.0.0.1",
-    "basePath": "/api",
+  "basePath": "/web/index.php",
     "schemes": [
         "http"
     ],
@@ -143,7 +143,7 @@
                 }
             }
         },
-        "/game/{id}": {
+      "/game/{gameId}": {
             "get": {
                 "tags": [
                     "game"
@@ -214,14 +214,14 @@
                 }
             }
         },
-        "/gameAccount/{id},{type}": {
+      "/gameAccount/{userId},{gameAccountTypeId}": {
             "get": {
                 "tags": [
                     "gameAccount"
                 ],
                 "parameters": [
                     {
-                        "$ref": "#/parameters/gameAccId"
+                      "$ref": "#/parameters/userId"
                     },
                     {
                         "$ref": "#/parameters/gameAccountTypeId"
@@ -370,7 +370,7 @@
                 }
             }
         },
-        "/lobby/{id}": {
+      "/lobby/{lobbyId}": {
             "get": {
                 "tags": [
                     "lobby"
@@ -395,7 +395,7 @@
                 }
             }
         },
-        "/lobby/byOwnerId/{ownerId}": {
+      "/lobby/byOwnerId/{userId}": {
             "get": {
                 "tags": [
                     "lobby"
@@ -476,7 +476,7 @@
                 }
             }
         },
-        "/user/{id}": {
+      "/user/{userId}": {
             "get": {
                 "tags": [
                     "user"
